--- a/day1.ipynb
+++ b/day1.ipynb
@@ -167,8 +167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "13eb8a2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c269b06",
    "metadata": {},
    "outputs": [],
    "source": []
