--- a/day1.ipynb
+++ b/day1.ipynb
@@ -177,8 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5c269b06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83910598",
    "metadata": {},
    "outputs": [],
    "source": []
