--- a/day1.ipynb
+++ b/day1.ipynb
@@ -177,13 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5c269b06",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os, re"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6dab6ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
