--- a/day1.ipynb
+++ b/day1.ipynb
@@ -157,12 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "54395c43",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd, time"
    ]
   },
   {
