--- a/day1.ipynb
+++ b/day1.ipynb
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd, time"
+    "import pandas as pd, time, re"
    ]
   },
   {
