--- a/day1.ipynb
+++ b/day1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0ad97ad1",
    "metadata": {},
    "outputs": [
@@ -11,44 +11,46 @@
      "output_type": "stream",
      "text": [
       "Collecting pandas\n",
-      "  Downloading pandas-2.3.0-cp312-cp312-win_amd64.whl.metadata (19 kB)\n",
-      "Collecting numpy>=1.26.0 (from pandas)\n",
-      "  Downloading numpy-2.3.1-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
+      "  Downloading pandas-2.3.1-cp311-cp311-win_amd64.whl.metadata (19 kB)\n",
+      "Collecting numpy>=1.23.2 (from pandas)\n",
+      "  Downloading numpy-2.3.2-cp311-cp311-win_amd64.whl.metadata (60 kB)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in .\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
       "Collecting pytz>=2020.1 (from pandas)\n",
       "  Downloading pytz-2025.2-py2.py3-none-any.whl.metadata (22 kB)\n",
       "Collecting tzdata>=2022.7 (from pandas)\n",
-      "  Using cached tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "  Downloading tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
       "Requirement already satisfied: six>=1.5 in .\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-      "Downloading pandas-2.3.0-cp312-cp312-win_amd64.whl (11.0 MB)\n",
-      "   ---------------------------------------- 0.0/11.0 MB ? eta -:--:--\n",
-      "   ------------ --------------------------- 3.4/11.0 MB 22.3 MB/s eta 0:00:01\n",
-      "   ----------------- ---------------------- 4.7/11.0 MB 11.4 MB/s eta 0:00:01\n",
-      "   -------------------- ------------------- 5.5/11.0 MB 9.3 MB/s eta 0:00:01\n",
-      "   ----------------------- ---------------- 6.6/11.0 MB 8.6 MB/s eta 0:00:01\n",
-      "   ---------------------------- ----------- 7.9/11.0 MB 7.4 MB/s eta 0:00:01\n",
-      "   ------------------------------- -------- 8.7/11.0 MB 6.9 MB/s eta 0:00:01\n",
-      "   --------------------------------- ------ 9.2/11.0 MB 6.2 MB/s eta 0:00:01\n",
-      "   ----------------------------------- ---- 9.7/11.0 MB 5.8 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 10.2/11.0 MB 5.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  10.7/11.0 MB 5.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 11.0/11.0 MB 5.0 MB/s eta 0:00:00\n",
-      "Downloading numpy-2.3.1-cp312-cp312-win_amd64.whl (12.7 MB)\n",
-      "   ---------------------------------------- 0.0/12.7 MB ? eta -:--:--\n",
-      "   - -------------------------------------- 0.5/12.7 MB 3.4 MB/s eta 0:00:04\n",
-      "   ---- ----------------------------------- 1.3/12.7 MB 3.5 MB/s eta 0:00:04\n",
-      "   ------ --------------------------------- 2.1/12.7 MB 3.7 MB/s eta 0:00:03\n",
-      "   --------- ------------------------------ 3.1/12.7 MB 4.0 MB/s eta 0:00:03\n",
-      "   ------------- -------------------------- 4.2/12.7 MB 4.1 MB/s eta 0:00:03\n",
-      "   ---------------- ----------------------- 5.2/12.7 MB 4.4 MB/s eta 0:00:02\n",
-      "   -------------------- ------------------- 6.6/12.7 MB 4.6 MB/s eta 0:00:02\n",
-      "   ------------------------ --------------- 7.9/12.7 MB 4.9 MB/s eta 0:00:02\n",
-      "   ----------------------------- ---------- 9.4/12.7 MB 5.1 MB/s eta 0:00:01\n",
-      "   --------------------------------- ------ 10.7/12.7 MB 5.3 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 12.3/12.7 MB 5.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 12.7/12.7 MB 5.3 MB/s eta 0:00:00\n",
+      "Downloading pandas-2.3.1-cp311-cp311-win_amd64.whl (11.3 MB)\n",
+      "   ---------------------------------------- 0.0/11.3 MB ? eta -:--:--\n",
+      "   ------------ --------------------------- 3.4/11.3 MB 25.2 MB/s eta 0:00:01\n",
+      "   ---------------- ----------------------- 4.7/11.3 MB 11.9 MB/s eta 0:00:01\n",
+      "   -------------------- ------------------- 5.8/11.3 MB 9.0 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 6.8/11.3 MB 8.4 MB/s eta 0:00:01\n",
+      "   -------------------------- ------------- 7.6/11.3 MB 7.3 MB/s eta 0:00:01\n",
+      "   --------------------------- ------------ 7.9/11.3 MB 6.3 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 8.7/11.3 MB 5.9 MB/s eta 0:00:01\n",
+      "   --------------------------------- ------ 9.4/11.3 MB 5.7 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 10.0/11.3 MB 5.2 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 10.2/11.3 MB 4.9 MB/s eta 0:00:01\n",
+      "   ------------------------------------- -- 10.7/11.3 MB 4.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------  11.3/11.3 MB 4.5 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 11.3/11.3 MB 4.4 MB/s  0:00:02\n",
+      "Downloading numpy-2.3.2-cp311-cp311-win_amd64.whl (13.1 MB)\n",
+      "   ---------------------------------------- 0.0/13.1 MB ? eta -:--:--\n",
+      "   - -------------------------------------- 0.5/13.1 MB 2.8 MB/s eta 0:00:05\n",
+      "   ---- ----------------------------------- 1.3/13.1 MB 3.5 MB/s eta 0:00:04\n",
+      "   ------- -------------------------------- 2.4/13.1 MB 3.9 MB/s eta 0:00:03\n",
+      "   ---------- ----------------------------- 3.4/13.1 MB 4.3 MB/s eta 0:00:03\n",
+      "   ------------- -------------------------- 4.5/13.1 MB 4.5 MB/s eta 0:00:02\n",
+      "   ----------------- ---------------------- 5.8/13.1 MB 4.8 MB/s eta 0:00:02\n",
+      "   ---------------------- ----------------- 7.3/13.1 MB 5.1 MB/s eta 0:00:02\n",
+      "   -------------------------- ------------- 8.7/13.1 MB 5.3 MB/s eta 0:00:01\n",
+      "   -------------------------------- ------- 10.5/13.1 MB 5.6 MB/s eta 0:00:01\n",
+      "   ----------------------------------- ---- 11.5/13.1 MB 5.6 MB/s eta 0:00:01\n",
+      "   -------------------------------------- - 12.6/13.1 MB 5.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 13.1/13.1 MB 5.4 MB/s  0:00:02\n",
       "Downloading pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
-      "Using cached tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
+      "Downloading tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
       "Installing collected packages: pytz, tzdata, numpy, pandas\n",
       "\n",
       "   ---------------------------------------- 0/4 [pytz]\n",
@@ -83,11 +85,7 @@
       "   -------------------- ------------------- 2/4 [numpy]\n",
       "   -------------------- ------------------- 2/4 [numpy]\n",
       "   -------------------- ------------------- 2/4 [numpy]\n",
-      "   ------------------------------ --------- 3/4 [pandas]\n",
-      "   ------------------------------ --------- 3/4 [pandas]\n",
-      "   ------------------------------ --------- 3/4 [pandas]\n",
-      "   ------------------------------ --------- 3/4 [pandas]\n",
-      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
       "   ------------------------------ --------- 3/4 [pandas]\n",
       "   ------------------------------ --------- 3/4 [pandas]\n",
       "   ------------------------------ --------- 3/4 [pandas]\n",
@@ -147,7 +145,7 @@
       "   ------------------------------ --------- 3/4 [pandas]\n",
       "   ---------------------------------------- 4/4 [pandas]\n",
       "\n",
-      "Successfully installed numpy-2.3.1 pandas-2.3.0 pytz-2025.2 tzdata-2025.2\n"
+      "Successfully installed numpy-2.3.2 pandas-2.3.1 pytz-2025.2 tzdata-2025.2\n"
      ]
     }
    ],
@@ -218,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
